package seedu.duke.command;

public enum CommandEnum {
    BUDGET,
    DEPOSIT,
    EXPENSE,
    STATS,
    EXIT,
    HELP,
    DETAIL
}
